    Prooftree also supports some recent Coq features, see below.

** Coq changes

*** Asynchronous parallel compilation of required modules
    Proof General has now a second implementation for compiling
    required Coq modules. 
    Check menu Coq -> Settings -> Compile Parallel In Background
    to compile modules in parallel in the background while Proof
    General stays responsive.

*** Support for bullets, braces and Grab Existential Variables for Prooftree.

*** Support for _Coqproject files

    According to Coq documentation, it is advised to use coq_makefile
    -f _CoqProject -o Makefile to build your Makefile automatically
    from "profect file" _CoqProject. Such a file should contains the
    options to pass to coq_makefile, i.e. paths to add to coq load
    path (-I, -R) and other options to pass to coqc/coqtop (-arg).

    Coqide (and now proofgeneral) do use the information stored in
    this file to configure the options to add to the coqtop
    invocation. When opening a coq file, proofgeneral looks for a file
    _Coqproject in the current directory or a parent directory and
    reads it. Except for very unlikely situation this should replace
    the use of local file variables (which remains possible and
    overrides project file options).

*** Automatic insertion of "as" clauses.

    Should work for induction and destruct for now. Toggle this option
    with Coq/Settings/Auto insert As.

*** Support for prettify-symbols-mode.

* Changes of Proof General 4.2 from Proof General 4.1

** Generic/misc changes

*** Added user option: `proof-next-command-insert-space'
    Allows the user to turn off the electric behaviour of generating
    newlines or spaces in the buffer.  Turned on by default, set
    to nil to revert to PG 3.7 behaviour.

*** Support proof-tree visualization via the external Prooftree program
    Currently only Coq (using Coq version 8.4beta or newer)
    supports proof-tree visualization. If Prooftree is installed,